--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <div class="player">
                 <h3>Play with:</h3>
                 <div class="player_btn">
+                    <span class="before">AII</span>
                     <button type="button" class="btn toggle_btn">AI</button>
+                    <span class="after">Friend</span>
                 </div>
             </div>
         </div>
