--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             <div class="reset"><button class="btn reset_btn" type="button">Reset</button></div>
             <div class="player">
                 <h3>Play with:</h3>
-                <div class="player_btn">
+                <div class="cont">
                     <span class="before">AII</span>
-                    <button type="button" class="btn toggle_btn">AI</button>
+                    <div class="player_btn">
+                        <button type="button" class="btn toggle_btn">AI</button>
+                    </div>
                     <span class="after">Friend</span>
                 </div>
             </div>
