--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="player">
                 <h3>Play with:</h3>
                 <div class="cont">
-                    <span class="before">AII</span>
+                    <span class="before">AI</span>
                     <div class="player_btn">
                         <button type="button" class="btn toggle_btn">AI</button>
                     </div>
